chore: create home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,16 @@
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-    
-    <%= stylesheet_link_tag :all, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <ul>
+      <li><%= link_to "jQuery", "http://localhost:3000" %></li>
+      <li><%= link_to "Stimulus", "http://localhost:3001" %></li>
+    </ul>
+
+    <hr>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
